
[2022-01-07]
- Added Spotted Hippogryph Down to the loot table of Shoveltusk Forager for the quest Hasty Preparations.
- Changed flags of Spotted Hippogryph Down to allow every member of a group to loot it.

- Changed flags of Book of Runes - Chapter 1 to allow every member of a group to loot it.
- Changed flags of Book of Runes - Chapter 2 to allow every member of a group to loot it.
- Changed flags of Book of Runes - Chapter 3 to allow every member of a group to loot it.

- Changed the respawn time of Iron Rune Carving Tools.

[2022-01-09]
- Added Wyrmtail to the loot table of Searing Whelp for the quest Catch a Dragon by the Tail.
- Added Wyrmtail to the loot table of Drywallow Daggermaw for the quest Catch a Dragon by the Tail.
- Changed flags of Wyrmtail to allow every member of a group to loot it.

- Added Milly's Harvest to the loot table of Defias Thug for the quest Milly's Harvest.
- Changed flags of Milly's Harvest to allow every member of a group to loot it.

[2022-01-10]
- Added Handful of Oats to the loot table of Harvest Golem for the quest Poor Old Blanchy.
- Added Handful of Oats to the loot table of Rusty Harvest Golem for the quest Poor Old Blanchy.
- Changed flags of Handful of Oats to allow every member of a group to loot it.

- Changed flags of Goretusk Liver to allow every member of a group to loot it.
- Changed flags of Stringy Vulture Meat to allow every member of a group to loot it.
- Changed flags of Murloc Eye to allow every member of a group to loot it.
- Changed flags of Goretusk Snout to allow every member of a group to loot it.

[2022-01-12]
- Added Hellfire Spineleaf to the loot table of Starving Helboar for the quest Preparing the Salve.
- Added Hellfire Spineleaf to the loot table of Bonestripper Buzzard for the quest Preparing the Salve.
- Changed flags of Hellfire Spineleaf to allow every member of a group to loot it.

- Changed flags of Bleeding Hollow Blood to allow every member of a group to loot it.